tests/NormalTests/paczka1/small_fuzzy/72204098.err
Error in line 3: LaDG3i2R A667 64,95
Error in line 1: v03Rzwko60s S927 47,4
